# pca-based-feature-extraction

./: .gitignore  README.md  pyproject.toml
examples/: run_pca.py  run_ttest.py
src/pcafeat/: __init__.py  pca_feature_select.py  select_pca.py  select_ttest.py
