[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pcafeat"
dynamic = ["version"]
description = "PCA-based and t-test-based feature selection for high-dimensional neuroimaging data"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    {name = "Ayumu Yamashita"},
]
keywords = ["pca", "feature-selection", "neuroimaging", "statistics", "machine-learning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "joblib>=1.1.1",
    "matplotlib>=3.3.4",
    "numpy>=1.19.5",
    "pandas>=0.25.3",
    "scikit-learn>=0.24.2",
    "scipy>=1.5.4",
    "seaborn>=0.11.2",
    "statsmodels>=0.12.2",
    "tqdm>=4.64.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.dynamic]
version = {attr = "pcafeat.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
